--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,8 @@ href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min
         <label for="message">Message:</label>
         <textarea id="message" name="message" rows="4" required></textarea>
         <button type="submit" class="btn">Submit</button>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script> <script> grecaptcha.render('captcha', { 'sitekey' : 'your-site-key-here' }); </script>
+
       </form>
     </div>
   </div>
