--- a/contact.html
+++ b/contact.html
@@ -38,18 +38,30 @@ href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </nav>
-    <form id="contactForm" action="submit_form.php" method="post">
+        <a href=""><i class="fa cart fa-cart plus"></i></a>
+      </div>
+      
+    <div class="contact-form">
+      <h2>Contact Us</h2>
+      <form id="contactForm" action="submit_form.php" method="post">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
         <label for="message">Message:</label>
-        <textarea id="message" name="message" required></textarea><br><br>
-
+        <textarea id="message" name="message" rows="4" required></textarea>
         <div id="captcha-image"></div>
         <label for="captcha">Enter the text shown above:</label>
         <input type="text" id="captcha" name="captcha" required><br><br>
 
         <button type="submit" class="btn">Send</button>
         <p id="errorMessages" class="error"></p>
-    </form>
 
+        <button type="submit" class="btn">Submit</button>
+      </form>
+    </div>
+  </div>
+          
     <script>
         function generateCaptcha() {
             const characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
