--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@ href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min
       
     <div class="contact-form">
       <h2>Contact Us</h2>
-      <form id="contactForm" action="submit_form.php" method="post" style="background-color: rgba(255,255,255,.5);;">
+      <form id="contactForm" action="submit_form.php" method="post" style="background-color: white;">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
         <label for="email">Email:</label>
